# accounting

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
.github/workflows/: testing.yml
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: account.py  category.py  proverka.py  transaction.py
app/core/: config.py
app/crud/: __init__.py  crud_account.py  crud_category.py  crud_transaction.py
app/db/: init_db.py
app/models/: account.py  category.py  transaction.py  type_category.py  type_transaction.py
app/schemas/: account.py  category.py  transaction.py
tests/: test_main.py
