[tool.poetry]
name = "finance-backend"
version = "0.1.0"
description = ""
authors = ["akalinin <am1kalinin@gmail.com>"]
readme = "README.md"
packages = [{include = "finance_backend"}]

[tool.isort]
line_length = 100
profile = "black"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[flake8]
max-line-length=100


[tool.poetry.dependencies]
python = "3.11"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
sqlalchemy-utils = "^0.41.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pre-commit = "^3.7.0"
isort = "^5.13.2"
black = "^24.3.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
